# Ekam-Query

./: .gitignore  README.md  main.py  pyproject.toml
backend/: main.py
backend/api/: deps.py
backend/api/routes/: ingestion.py  query.py  schema.py
backend/core/: config.py
backend/db/: sessions.py
backend/schemas/: ingestion.py  query.py  schema.py
backend/services/: document_processor.py  query_engine.py  schema_discovery.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/components/: DocumentUploader.jsx  QueryPanel.jsx  ResultsView.jsx
frontend/src/styles/: AppStyles.module.css
