[project]
name = "ekam-query"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.119.1",
    "pypdf>=6.1.3",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
