[project]
name = "ekam-query"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "asyncpg>=0.30.0",
    "chromadb~=0.5.4",
    "fastapi>=0.119.1",
    "greenlet>=3.2.4",
    "pydantic~=2.12.3",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.1.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.0",
    "transformers>=4.46.3",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "ruff>=0.14.1",
]
